# OpenGD-AI-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analyze_cmake.py  analyze_deps.sh  cleanup.py  cleanup.sh  make_project.sh  opengd.pc  project.yml  setup.py  setup.sh  update.sh
Source/: AppDelegate.cpp  BaseGameLayer.cpp  BaseGameLayer.h  CircleWave.cpp  Config.h  EffectManager.h  GJGameLevel.cpp  GJGameLevel.h  GameObject.cpp  GameObject.h  LevelEditorLayer.cpp  LevelEditorLayer.h  LevelTools.h  PlayLayer.cpp  PlayLayer.h  PlayerObject.cpp  PlayerObject.h  ResourcesLoadingLayer.cpp
Source/GameToolbox/: FileSystem.h  LevelLoader.h  conv.h
Source/platform/: LinuxAudioManager.cpp  LinuxAudioManager.h  LinuxGraphicsManager.cpp  LinuxGraphicsManager.h  LinuxInputManager.cpp  LinuxInputManager.h  LinuxMaintenanceSystem.cpp  LinuxMaintenanceSystem.h  LinuxOptimizer.cpp  LinuxPerformanceMonitor.cpp  LinuxPerformanceMonitor.h  LinuxPlatformManager.cpp  LinuxPlatformManager.h  LinuxPolishSystem.cpp  LinuxResourceManager.cpp  LinuxResourceManager.h  LinuxSecurityManager.cpp  LinuxSecurityManager.h  LinuxUserInterface.cpp  LinuxUserInterface.h  LinuxWindowManager.cpp  LinuxWindowManager.h  PlatformManager.h
Source/tests/: LinuxDistributionTests.cpp  LinuxDistributionTests.h  LinuxFinalTests.cpp  LinuxFinalTests.h  LinuxIntegrationTests.cpp  LinuxIntegrationTests.h  LinuxSystemTests.cpp  LinuxSystemTests.h  LinuxTestSuite.cpp  TestRunner.cpp
ai_deployment/: Dockerfile  docker-compose.yml  job.yaml  postgres.yaml  requirements.docker.txt
ai_source/: config-feedforward.txt  config.json  requirements.txt  run_ai.py  server.py  train.py
cmake/Modules/: AXShaderHelpers.cmake
doc/: OPENGD_LINUX_BUILD_FIXES.md
docker/: arch.Dockerfile  fedora.Dockerfile  ubuntu.Dockerfile
docs/: LINUX_SUPPORT_PROGRESS.md  code_review.md  linux_development.md  linux_installation.md  linux_performance.md  linux_port.md  linux_troubleshooting.md  windows_testing.md
docs/linux/: configuration_guide.md  customization_guide.md  distribution_specific.md  security_features.md  ui_features.md
patches/: axmol-cmake.patch  fix_cmake_errors.sh
patches/axmol/: 3rdparty.cmake  AXBuildHelpers.cmake  AXBuildPredefinitions.cmake  AXBuildSet.cmake  AXFetchHelpers.cmake  AXOptionHelpers.cmake  AXSLCC.cmake  AXShaderHelpers.cmake  chipmunk.cmake  chipmunk_root.cmake  core.cmake  cpp_tests.cmake  fetch.cmake  fmt.cmake  freetype.cmake  zlib.cmake
scripts/: install-dependencies.sh  run_tests.sh  test_all_distributions.sh
scripts/dist_tests/: arch_test.sh  fedora_test.sh  ubuntu_test.sh
